# agenttest

./: .gitignore  LICENSE  README.md  pyproject.toml
agenttest/: __init__.py  assertions.py  cli.py  plugin.py  replay.py  scorer.py  trace.py  tracer.py
examples/: simple_agent.py
examples/tests/: test_simple_agent.py
examples/traces/: research_no_email.trace.json  research_with_email.trace.json
tests/: test_vertex_behavior.py
